Selenide logic with API